# hellodata-be-airflow-pod-operator-params

./: .bumpversion.toml  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  README_PYPI.md  get_pod_operator_params_documentation.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: upload-pypi.yaml
pod-operator-params/: __init__.py  common_airflow_config.py
src/: hellodata_be_airflow_pod_operator_params.py  hellodata_be_airflow_pod_operator_params.pyi  hellodata_pod_operator_params.py
tests/: example_dag_advanced.py  example_dag_simple.py  test_dag.py
