[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hellodata_pod_operator_params"
version = "0.0.3"
authors = [
  { name="Felix Neidhart", email="felix.neidhart@bedag.ch" },
  { name="Bedag Informatik AG", email="hellodata@bedag.ch" }
]
description = "A small library providing a way to pass parameters to a pod operator in Airflow."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text="MIT"}

[project.urls]
Homepage = "https://github.com/bedag/pod_operator_params"
Issues = "https://github.com/bedag/pod_operator_params/issues"